--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,65 @@
-// TODO
+.logo {
+  margin-bottom: 40px;
+
+  @media (min-width: 726px) {
+    margin-bottom: 65px;
+  }
+}
+
+.post {
+  & + & {
+    margin-top: 36px;
+
+    @media (min-width: 726px) {
+      margin-top: 50px;
+    }
+  }
+
+  h3 {
+    font-size: 22px;
+    color: var(--heading);
+
+    margin-bottom: 8px;
+
+    @media (min-width: 726px) {
+      font-size: 28px;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+
+      transition: color 200ms ease-in;
+
+      &:hover {
+        color: var(--primary);
+      }
+    }
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 1.2;
+
+    margin-bottom: 16px;
+
+    @media (min-width: 726px) {
+      font-size: 18px;
+      margin-bottom: 24px;
+    }
+  }
+}
+
+.button {
+  font-family: Inter, sans-serif;
+  font-size: 18px;
+  font-weight: semiBold;
+
+  color: var(--primary);
+  background: none;
+  border: none;
+
+  margin-top: 50px;
+
+  cursor: pointer;
+}
