--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,39 @@
-// TODO
+.banner {
+  max-width: 100%;
+  height: 250px;
+
+  object-fit: cover;
+
+  @media (min-width: 726px) {
+    height: 400px;
+  }
+}
+
+.title {
+  font-size: 36px;
+  color: var(--heading);
+
+  margin-bottom: 16px;
+
+  @media (min-width: 726px) {
+    font-size: 48px;
+    margin-bottom: 24px;
+  }
+}
+
+.article {
+  h2 {
+    color: var(--heading);
+    margin: 50px 0;
+  }
+
+  p {
+    text-align: justify;
+    line-height: 1.5;
+  }
+
+  a {
+    color: var(--primary);
+    text-decoration: none;
+  }
+}
